Final project links added - YouTube section finalised - CV download link added

--- a/main.css
+++ b/main.css
@@ -556,8 +556,16 @@ h1 {
 }
 
 .box-around .item {
-  border: 2px solid black;
   margin: auto 0;
+  height: 250px;
+  width: 250px;
+  text-align: center;
+}
+
+.box-around .item .fa-youtube {
+  font-size: 60px;
+  color: red;
+  margin: 40px 0;
 }
 
 /* CONTACT */
@@ -568,7 +576,7 @@ h1 {
 }
 
 .contact h4 {
-  color: #009b72;
+  color: white;
   text-align: center;
   padding: 30px;
 }
@@ -673,7 +681,6 @@ footer .socials {
 }
 
 footer .socials i {
-  color: white;
   font-size: 32px;
   margin: 15px auto;
 }
@@ -684,27 +691,5 @@ footer .socials i:hover {
           transform: translateY(-10px);
   -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
-}
-
-#cv-container {
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#cv-container #cv {
-  width: 40vw;
-  height: 90vh;
-  border: 2px solid red;
-  z-index: 4;
 }
 /*# sourceMappingURL=main.css.map */
