--- a/main.scss
+++ b/main.scss
@@ -145,7 +145,7 @@ $base-margin: 8px;
   padding-bottom: 50px;
 }
 
-.nology {
+._nology {
   display: flex;
   flex-direction: column;
   justify-content: center;
