--- a/main.scss
+++ b/main.scss
@@ -11,6 +11,10 @@ $base-margin: 8px;
   padding: 0px;
 }
 
+// a {
+//   color: $white !important;
+// }
+
 .page1 {
   height: 100vh;
   width: 100vw;  
@@ -19,7 +23,7 @@ $base-margin: 8px;
 }
 
 .intro {
-  width: 50%;
+  // width: 50%;
   display: inline-block;
   margin-top: 30%;
   color: $white;
@@ -34,12 +38,14 @@ $base-margin: 8px;
   font-weight: bold;
   font-size: 16px;
   cursor: pointer;
-  color: white !important;
-  text-decoration: none !important;
   transition: all 0.4s ease 0s;
 
-  &:hover {
-    color: $accent;
+  a {
+    color: $white !important;
+
+    &:hover {
+      color: $accent;
+    }
   }
 }
 
@@ -514,7 +520,7 @@ h1 {
   flex-direction: column;
   margin: 3px;
   align-items: center;
-  color: rgb(218, 208, 208);
+  color: rgb(218, 208, 208) !important;
   margin: 0 auto;
   
   input {
@@ -545,13 +551,17 @@ h1 {
   .fa-envelope {
     font-size: 42px;
     margin-right: 70px;
+    color: $white !important;
+
+    &:hover {
+      color: $accent !important;
+    }
   }
 }
 
 
 footer {
   width: 100vw;
-  height: 60px;
   background-color: #3f4545;
   display: flex;
   justify-content: center;
@@ -565,6 +575,10 @@ footer {
     align-items: center;
     text-align: center;
     margin: 0 auto;
+
+    a {
+      color: $white !important;
+    }
 
     i {
       font-size: 32px;
